--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <section id="login">
             <div id="imagem">
-                FOTO
+                <!--Aqui vai uma imagem-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
