--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
                 <h1>Login</h1>
                 <p>Seja Bem-vindo (a) novamente. Faça login para acessar sau conta e poder fazer as configurações no seu ambiente. </p>
                 <form action="login.php" method="post" autocomplete="on">
-                <div id="campo">
-                    <span class="material-symbols-outlined">person</span>
-                    <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
-                    <label for="ilogin">login</label>
-                </div>
-                <div id="campo">
-                    <span class="material-symbols-outlined">vpn_key</span>
-                    <input type="password" name="isenha" id="senha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
-                    <label for="isenha">senha</label>
-                </div>
-                <input type="submit" value="Entrar">
-                <a href="esqueci.html">
-                    Esqueci a senha <span class="material-symbols-outlined">mail</span>
-                </a>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">vpn_key</span>
+                        <input type="password" name="isenha" id="senha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                        <label for="isenha">senha</label>
+                    </div>
+                        <input type="submit" value="Entrar">
+                        <a href="esqueci.html" class="botao">
+                        Esqueci a senha <span class="material-symbols-outlined">mail</span>
+                        </a>
                 </form>
             </div>
         </section>
